# raggit

./: .gitignore  README.md  pyproject.toml
examples/: basic_comparison.py
src/raggit/: __init__.py  embedder.py  evaluator.py  metrics.py  models.py  report.py  store.py  suite.py
src/raggit/evaluation/: __init__.py  base.py  corpus.py  engine.py  report.py  suite.py
src/raggit/evaluation/evals/: __init__.py  embedding.py  search.py
src/raggit/fns/: __init__.py  chunk.py  embedding.py  index.py
src/raggit/middleware/: __init__.py  middleware.py  models.py
src/raggit/middleware/cache/: __init__.py  cache.py
src/raggit/middleware/monitor/: monitor.py
src/raggit/middleware/stores/: __init__.py  base.py  sqlite.py
src/raggit/monitor/: __init__.py
tests/: test_evaluator.py  test_middleware.py
