[project]
name = "raggit"
version = "0.1.1"
description = "Version control for your RAG pipeline — compare embedding models on your own data"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "rich",
]

[project.optional-dependencies]
openai = ["openai"]
huggingface = ["sentence-transformers"]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raggit"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "examples/",
    "RAGGIT_SPECS.md",
    ".raggit/",
    ".idea/",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.urls]
Homepage = "https://github.com/Joafac4/raggit"
Repository = "https://github.com/Joafac4/raggit"
